--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 * {
-  border: 1px red solid;
+  /* border: 1px red solid; */
   box-sizing: border-box;
 }
 
@@ -35,8 +35,23 @@ header {
   position: relative;
 }
 
-.icon span {
+.icon span, .icon i, .icon input {
   position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+.icon span {
+  top: -35px;
+}
+
+.icon input {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  text-align: center;
+  font-size: 30px;
+  font-weight: bold;
 }
 
 .display {
