--- a/style.css
+++ b/style.css
@@ -130,6 +130,14 @@ header {
 /* PROGRESS BAR-------------------------------------------------------- */
 
 .progress {
-  border: 1px solid black;
+  border: 4px solid green;
+  border-radius: 10px;
   width: 700px;
+}
+
+#time-left {
+  background-color: green;
+  height: 100%;
+  width: 50%;
+  margin: 0;
 }
