--- a/style.css
+++ b/style.css
@@ -65,9 +65,11 @@ body {
 
 header {
   text-align: center;
-  font-size: 20px;
+  font-size: 40px;
   font-family: sans-serif;
+  font-weight: bold;
   margin-bottom: 30px;
+  padding: 40px 0;
 }
 
 .bar {
@@ -138,6 +140,6 @@ header {
 #time-left {
   background-color: green;
   height: 100%;
-  width: 50%;
+  width: 100%;
   margin: 0;
 }
