--- a/style.css
+++ b/style.css
@@ -51,10 +51,13 @@ table {
 * {
   /* border: 1px red solid; */
   box-sizing: border-box;
-}/* DISPLAY----------------------------------------------------------- */
+}
+
+/* BODY----------------------------------------------------------- */
 
 
 body {
+  background-color: #1f7565;
   height: 99vh;
   width: 99vw;
   margin: 0;
@@ -64,32 +67,41 @@ body {
 /* DASHBOARD--------------------------------------------------------- */
 
 header {
+  color: #e8e1ae;
   text-align: center;
-  font-size: 40px;
+  font-size: 56px;
   font-family: sans-serif;
   font-weight: bold;
   margin-bottom: 30px;
-  padding: 40px 0;
+  padding: 80px 0;
 }
 
 .bar {
   margin: 0 auto;
   width: 700px;
-  height: 100px;
+  height: 135px;
 }
 
 .dashboard {
-  padding-top: 10px;
+  border: 3px solid #e8e1ae;
+  border-radius: 20px;
+  padding-top: 35px;
   padding-left: 18px;
+  margin-bottom: 50px;
 }
 
 .icon {
+  color: #e8e1ae;
   display: inline-block;
   width: 15%;
   height: 90px;
   margin: 0 0.25%;
   position: relative;
-  cursor: pointer;
+  vertical-align: middle;
+}
+
+.icon:hover {
+  color: #c7b322;
 }
 
 .icon span, .icon i, .icon input {
@@ -99,49 +111,107 @@ header {
 }
 
 .icon span {
-  top: -35px;
+  font-family: sans-serif;
+  font-size: 22px;
+  font-weight: bold;
+  top: -28px;
 }
 
 .icon input {
-  width: 100%;
-  height: 100%;
+  width: 90%;
+  height: 90%;
+  background-color:#e8e1ae;
+  border: 5px solid #e8e1ae;
   border-radius: 50%;
   text-align: center;
-  font-size: 30px;
+  font-size: 36px;
   font-weight: bold;
 }
 
-/* DISPLAY----------------------------------------------------------- */
-
-.display {
-  border: 4px green solid;
-  border-radius: 50%;
-  width: 200px;
-  margin: 20px auto;
-  height: 200px;
-  text-align: center;
+input[type="number"] {
+  -webkit-appearance: textfield;
+     -moz-appearance: textfield;
+          appearance: textfield;
 }
 
-.display p {
-  font-size: 72px;
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+}
+
+button {
+  border: none;
+  background: none;
+  height: 0;
+  width: 0;
+}
+
+button img {
+  color: #e8e1ae;
+  height: 30px;
   position: relative;
-  top: 50%;
-  transform: translateY(-50%);
+  width: 30px;
+}
+
+img.plus {
+  z-index: 10;
+  bottom: 5px;
+  left: 31px;
+}
+
+img.minus {
+  top: 53px;
+  left: 14px;
+}
+
+.with-sound {
+  cursor: pointer;
 }
 
 
 /* PROGRESS BAR-------------------------------------------------------- */
 
+p#main-display {
+  color: beige;
+  bottom: 100px;
+  font-size: 72px;
+  position: relative;
+  text-align: center;
+}
+
 .progress {
-  border: 4px solid green;
+  background-color: #a1bbb4;
+  border: 4px solid #1f4844;
   border-radius: 10px;
+  margin-top: 50px;
   width: 700px;
 }
 
 #time-left {
-  background-color: green;
+  background-color: #1f4844;
+  border-radius: 5px;
   height: 100%;
   width: 100%;
   margin: 0;
   transition: width 1s linear;
+}
+
+/* META------------------------------------------------------------ */
+
+input::selection {
+  background: #e0e092; /* WebKit/Blink Browsers */
+}
+input::-moz-selection {
+  background: #e0e092; /* Gecko Browsers */
+}
+
+*::selection {
+  background: rgba(95,193,208,0); /* WebKit/Blink Browsers */
+}
+*::-moz-selection {
+  background: rgba(95,193,208,0); /* Gecko Browsers */
+}
+
+button:focus, input:focus {
+    outline: none;
 }
